--- a/friend-book/src/app/app.component.html
+++ b/friend-book/src/app/app.component.html
@@ -1,21 +1,16 @@
+{{ formName.value | json }}
 
-<!--First name-->
-<!--Last name-->
-<!--Email-->
-<!--Phone number-->
-<!--Favourite language (html, css, js, php, ...), this will be a select with options-->
-
-<form>
+<form #formName="ngForm">
   <label for="firstName">First name: </label>
-  <input id="firstName" name="firstName" type="text"><br>
+  <input id="firstName" name="firstName" #inputName="ngModel" ngModel type="text"><br>
   <label for="lastName">Last name: </label>
-  <input id="lastName" name="lastName" type="text"><br>
+  <input id="lastName" name="lastName" #inputName="ngModel" ngModel type="text"><br>
   <label for="email">Email: </label>
-  <input id="email" name="email" type="text"><br>
+  <input id="email" name="email" #inputName="ngModel" ngModel type="text"><br>
   <label for="phoneNr">Phone number: </label>
-  <input id="phoneNr" name="phoneNr" type="text"><br>
+  <input id="phoneNr" name="phoneNr" #inputName="ngModel" ngModel type="text"><br>
   <label for="favLanguage">Favorite Language: </label>
-  <select id="favLanguage" name="favLanguage">
+  <select id="favLanguage" name="favLanguage" #inputName="ngModel" ngModel>
     <option *ngFor="let language of languages" value="{{language.value}}">{{language.name}}</option>
   </select><br>
   <button id="submit">Submit</button>
