--- a/friend-book/src/app/app.component.html
+++ b/friend-book/src/app/app.component.html
@@ -1,17 +1,43 @@
-{{ friendModel | json }}
-
-<form #formName="ngForm">
-  <label for="firstName">First name: </label>
-  <input id="firstName" name="firstName" #inputName="ngModel" [(ngModel)]="friendModel.firstName" type="text"><br>
-  <label for="lastName">Last name: </label>
-  <input id="lastName" name="lastName" #inputName="ngModel" [(ngModel)]="friendModel.lastName" type="text"><br>
-  <label for="email">Email: </label>
-  <input id="email" name="email" #inputName="ngModel" [(ngModel)]="friendModel.email" type="text"><br>
-  <label for="phoneNr">Phone number: </label>
-  <input id="phoneNr" name="phoneNr" #inputName="ngModel" [(ngModel)]="friendModel.phoneNr" type="text"><br>
-  <label for="favLanguage">Favorite Language: </label>
-  <select id="favLanguage" name="favLanguage" #inputName="ngModel" [(ngModel)]="friendModel.favLanguage">
-    <option *ngFor="let language of languages" value="{{language.value}}">{{language.name}}</option>
-  </select><br>
-  <button id="submit">Submit</button>
-</form>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css"
+        rel="stylesheet"/>
+</head>
+<body>
+  {{ friendModel | json }}
+<!--todo: add error messages for invalid input (step 12)-->
+  <form #formName="ngForm">
+    <label for="firstName">First name: </label>
+    <input id="firstName" name="firstName" #firstName="ngModel"
+           [(ngModel)]="friendModel.firstName" type="text" required
+           [class.border-danger]="firstName.invalid && firstName.touched"
+           pattern="^[a-zA-Z]{2,}+$"><br>
+    <label for="lastName">Last name: </label>
+    <input id="lastName" name="lastName" #lastName="ngModel"
+           [(ngModel)]="friendModel.lastName" type="text" required
+           [class.border-danger]="lastName.invalid && lastName.touched"
+           pattern="^[a-zA-Z]{2,}+$"><br>
+    <label for="email">Email: </label>
+    <input id="email" name="email" #email="ngModel"
+           [(ngModel)]="friendModel.email" type="text" required
+           [class.border-danger]="email.invalid && email.touched"
+           pattern="^(([^<>()\[\]\\.,;:\s@']+(\.[^<>()\[\]\\.,;:\s@']+)*)|('.+'))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$"><br>
+    <!--           source regex for email: https://www.emailregex.com/-->
+    <label for="phoneNr">Phone number: </label>
+    <input id="phoneNr" name="phoneNr" #phoneNr="ngModel"
+           [(ngModel)]="friendModel.phoneNr" type="text" required
+           [class.border-danger]="phoneNr.invalid && phoneNr.touched"
+           pattern="^(((\+|00)32[ ]?(?:\(0\)[ ]?)?)|0){1}(4(60|[789]\d)\/?(\s?\d{2}\.?){2}(\s?\d{2})|(\d\/?\s?\d{3}|\d{2}\/?\s?\d{2})(\.?\s?\d{2}){2})$"><br>
+    <!--           source regex for belgian phone number: https://regex101.com/r/hN5oL4/1-->
+    <label for="favLanguage">Favorite Language: </label>
+    <select id="favLanguage" name="favLanguage" #favLanguage="ngModel"
+            [(ngModel)]="friendModel.favLanguage" required
+            [class.border-danger]="favLanguage.invalid && favLanguage.touched">
+      <option *ngFor="let language of languages" value="{{language.value}}">{{language.name}}</option>
+    </select><br>
+    <button id="submit">Submit</button>
+  </form>
+</body>
+</html>
