--- a/friend-book/src/app/app.component.html
+++ b/friend-book/src/app/app.component.html
@@ -8,17 +8,17 @@
 <body>
   {{ friendModel | json }}
 <!--todo: add error messages for invalid input (step 12)-->
-  <form #formName="ngForm">
+  <form #friendForm="ngForm" novalidate>
     <label for="firstName">First name: </label>
     <input id="firstName" name="firstName" #firstName="ngModel"
            [(ngModel)]="friendModel.firstName" type="text" required
            [class.border-danger]="firstName.invalid && firstName.touched"
-           pattern="^[a-zA-Z]{2,}+$"><br>
+           pattern="^[a-zA-Z]{2,}$"><br>
     <label for="lastName">Last name: </label>
     <input id="lastName" name="lastName" #lastName="ngModel"
            [(ngModel)]="friendModel.lastName" type="text" required
            [class.border-danger]="lastName.invalid && lastName.touched"
-           pattern="^[a-zA-Z]{2,}+$"><br>
+           pattern="^[a-zA-Z]{2,}$"><br>
     <label for="email">Email: </label>
     <input id="email" name="email" #email="ngModel"
            [(ngModel)]="friendModel.email" type="text" required
@@ -37,7 +37,7 @@
             [class.border-danger]="favLanguage.invalid && favLanguage.touched">
       <option *ngFor="let language of languages" value="{{language.value}}">{{language.name}}</option>
     </select><br>
-    <button id="submit">Submit</button>
+    <button id="submit" [disabled]="friendForm.form.invalid">Submit</button>
   </form>
 </body>
 </html>
